Phase-0/k8s-bootcamp-assets/assets/myservice.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: asset-service
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: asset-lars
